# libxenbe

./: .gitignore  CMakeLists.txt  README.md  Version.hpp.in  doxygen.cfg  generateVersion.cmake
CMakeModules/: CodeCoverage.cmake
example/: CMakeLists.txt  ExampleBackend.cpp  ExampleBackend.hpp
include/: xenctrl.h  xenevtchn.h  xengnttab.h  xenstore.h
include/xen/be/: BackendBase.hpp  Exception.hpp  FrontendHandlerBase.hpp  Log.hpp  RingBufferBase.hpp  Utils.hpp  XenCtrl.hpp  XenEvtchn.hpp  XenGnttab.hpp  XenStat.hpp  XenStore.hpp
src/: BackendBase.cpp  CMakeLists.txt  FrontendHandlerBase.cpp  RingBufferBase.cpp  Utils.cpp  XenCtrl.cpp  XenEvtchn.cpp  XenGnttab.cpp  XenStat.cpp  XenStore.cpp  xenctrl.c  xenctrl_internal.cpp
tests/: CMakeLists.txt  testBackend.cpp  testBackend.hpp  testFrontendHandler.cpp  testFrontendHandler.hpp  testProtocol.h  testRingBuffer.cpp  testRingBuffer.hpp  testXenEvtchn.cpp  testXenGnttab.cpp  testXenStat.cpp  testXenStore.cpp
tests/mocks/: Pipe.cpp  Pipe.hpp  XenCtrlMock.cpp  XenCtrlMock.hpp  XenEvtchnMock.cpp  XenEvtchnMock.hpp  XenGnttabMock.cpp  XenGnttabMock.hpp  XenStoreMock.cpp  XenStoreMock.hpp
